- Updated Japanese translation (Tilt) - Updated Korean translation (Wewe)
git-svn-id: https://appetizer.googlecode.com/svn@261 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,4 +1,9 @@
-﻿Version 1.2.3.616 (2008-12-13):
+﻿Version 1.2.4.617 (2008-12-14):
+
+- Updated Japanese translation (Tilt)
+- Updated Korean translation (Wewe)
+
+Version 1.2.3.616 (2008-12-13):
 
 - Added Japanese translation (Tilt)
 - Added partial Korean translation (Wewe)
