- Fixed: USB hard drives were incorrectly detected as non-removable. As a result, the "Eject" button wasn't shown for these drives.
git-svn-id: https://appetizer.googlecode.com/svn@266 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,4 +1,9 @@
-﻿Version 1.2.4.617 (2008-12-14):
+﻿Version 1.2.4.637 (2008-12-17):
+
+- Added Japanese help file (Tilt)
+- Fixed: USB hard drives were incorrectly detected as non-removable. As a result, the "Eject" button wasn't shown for these drives.
+
+Version 1.2.4.617 (2008-12-14):
 
 - Updated Japanese translation (Tilt)
 - Updated Korean translation (Wewe)
