--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,4 +1,16 @@
-﻿Version 1.2.4.637 (2008-12-17):
+﻿Version 1.3.1.126 (2009-02-10):
+
+- Simplified skin system. There is now only one main background file per skin which contains most of the skin elements. That should make it much easier to create new skins.
+- Improved and generally made more consistent the plugin system.
+- Plugins are now disabled by default
+- Fixed: USB hard drives were incorrectly detected as non-removable. As a result, the "Eject" button wasn't shown for these drives.
+- Added Portuguese (BR) language and support for "code_COUNTRY" format
+- Skin: Added support for tiled background via IconOverlayInactive.png image
+- Skin: If no option button image is found, it now defaults to the base one
+- Skin: ditto for icon overlay images
+- New plugin: "Close after launching an app"
+
+Version 1.2.4.637 (2008-12-17):
 
 - Added Japanese help file (Tilt)
 - Fixed: USB hard drives were incorrectly detected as non-removable. As a result, the "Eject" button wasn't shown for these drives.
