--- a/trunk/Data/Help/et/appetizer_help.po
+++ b/trunk/Data/Help/et/appetizer_help.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: Appetizer Help\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-12-10 15:23+0000\n"
-"PO-Revision-Date: 2009-04-27 10:43+0200\n"
-"Last-Translator: Olav <olav.magi@hotmail.com>\n"
+"PO-Revision-Date: 2009-05-02 18:30-0000\n"
+"Last-Translator: Laurent Cozic\n"
 "Language-Team: Appetizer Project\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -31,7 +31,7 @@ msgstr "Appetizer on tasuta programmiavaja või dokk Windowsile. See aitab organ
 
 #: generate_help\main.cpp:126
 msgid "Additionally, the application supports the [http://portableapps.com PortableApps.com] format. So if you use Appetizer on a removable drive in the PortableApps.com format, the application will detect it and automatically import all your applications along with the 'Documents', 'Videos', 'Music' and 'Pictures' folders."
-msgstr "See programm toetab [http://portableapps.com PortableApps.com formaati. Kui sa kasutad Appetizeri eemaldataval kõvakettal PortavleApps.com formaadis, siis programm tunned selle automaatselt ära ja impordib kõik programmid koos dokumentidega, videote, muusika ja piltide kaustadega."
+msgstr "See programm toetab [http://portableapps.com PortableApps.com] formaati. Kui sa kasutad Appetizeri eemaldataval kõvakettal PortavleApps.com formaadis, siis programm tunned selle automaatselt ära ja impordib kõik programmid koos dokumentidega, videote, muusika ja piltide kaustadega."
 
 #: generate_help\main.cpp:131
 msgid "Features"
