- Updated Dutch locale - Updated Swedish locale - Give Securizer password window a title - Lua: done "shorcutLaunching" event - Support for web links - Fixed crash when saving config dialog, because no value was assigned to label position - Improved closing operation
git-svn-id: https://appetizer.googlecode.com/svn@303 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/trunk/Changelog.txt
+++ b/trunk/Changelog.txt
@@ -1,4 +1,9 @@
-﻿Version 1.4.1.1 Beta (2009-05-24):
+﻿Version 1.4.2.22 Beta (2009-05-25):
+
+- New: Icon labels can now be displayed below or to the right of the icon.
+- Fixed minor plugin issue
+
+Version 1.4.1.1 Beta (2009-05-24):
 
 - New: plugins can now have a Configuration dialog
 - New: many new plugin functions (possibility to change button icons, file functions, dialog functions, skin functions, new events, etc.)
